<resources>
    <string name="app_name">Pansari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account"><![CDATA[Create account >]]></string>
    <string name="user_login">User Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pansari_logo">Pansari logo</string>
    <string name="let_s_get_started">Lets Get Started!</string>
    <string name="create_an_account_to_get_amazing_feature_of_this_app">Create an account to get amazing feature of this app</string>
    <string name="select_account_type">Select account type</string>
    <string name="account_type">Account type</string>
    <string name="wholesaler_name">Wholesaler Name</string>
    <string name="wholesaler_address">Wholesaler address</string>
    <string name="products">Products</string>
    <string name="add_product_button">Add product button</string>
    <string name="create_account">Create Account</string>
    <string name="owner_name">Owner name</string>
    <string name="edit_product">Edit Product</string>
    <string name="add_product">Add product</string>
    <string name="product_image">Product image</string>
    <string name="product_name">Product name</string>
    <string name="brand_name">Brand name</string>
    <string name="unit_quantity">Unit quantity</string>
    <string name="pack_quantity">Pack quantity</string>
    <string name="product_description">Product description</string>
    <string name="favorite_wholesalers_title">Favorite wholesalers</string>
    <string name="place_order">Place order</string>
    <string name="view_order">View order</string>
    <string name="accept_order">Accept order</string>
    <string name="decline_order">Decline order</string>
    <string name="cancel_order">Cancel order</string>
    <string name="name">Name</string>
    <string name="order_id">Order ID</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contact">Contact</string>
    <string name="total_items">Total items</string>
    <string name="business_name">Business name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="business_contact_number">Business contact number</string>
    <string name="business_address">Business address</string>
    <string name="business_pin">Business pin</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_verification_alert">E-mail verification mail has been sent.\nPlease verify and login again!</string>
    <string name="cancel_order_alert">Do you really want to cancel this order.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="order_ready">Order Ready</string>
    <string name="delivered">Delevered</string>
</resources>