<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View.OnClickListener" />

        <import type="project.pansari.models.Product" />

        <variable
            name="appbarTitle"
            type="String" />

        <variable
            name="actionButtonText"
            type="String" />

        <variable
            name="product"
            type="Product" />

        <variable
            name="onActionClick"
            type="OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/productOverviewToolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="@{appbarTitle}" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="15dp">

                    <ImageView
                        android:id="@+id/productOverviewImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_round_images"
                        android:contentDescription="@string/product_image"
                        android:scaleType="centerCrop"
                        android:src="@color/blue" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/product_name"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="18sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/productOverviewProductName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={product.name}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/brand_name"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="18sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/productOverviewBrandName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={product.brand}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/unit_quantity"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="18sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/productOverviewUnitQuantity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={product.unitQuantity}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/pack_quantity"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="18sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/productOverviewPackQuantity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@={product.packQuantity}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/product_description"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="18sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/productOverviewProductDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:minHeight="100dp"
                                android:text="@={product.description}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/productOverviewMainActionButton"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="32dp"
                            android:background="@drawable/bg_round_button"
                            android:fontFamily="@font/poppins"
                            android:onClick="@{onActionClick}"
                            android:text="@{actionButtonText}" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>