<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="project.pansari.models.OrderWrap" />

        <import type="project.pansari.utils.DateTimeUtils" />

        <import type="android.view.View.OnClickListener" />

        <variable
            name="order"
            type="OrderWrap" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Order details" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout1"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/nameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/name"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/orderIdTitle"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside" />

                <TextView
                    android:id="@+id/orderIdTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/order_id"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/dateTitle"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

                <TextView
                    android:id="@+id/dateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/date"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/timeTitle"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/orderIdTitle" />

                <TextView
                    android:id="@+id/timeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/time"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/contactTitle"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/dateTitle"
                    tools:layout_editor_absoluteX="8dp" />

                <TextView
                    android:id="@+id/contactTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/contact"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/itemsCountTitle"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/timeTitle"
                    tools:layout_editor_absoluteX="8dp" />

                <TextView
                    android:id="@+id/itemsCountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/total_items"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/contactTitle"
                    tools:layout_editor_absoluteX="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{order.user.name}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/nameTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{order.id}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/orderIdTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/barrier5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{DateTimeUtils.getDate(order.timestamp)}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/dateTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/barrier5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{DateTimeUtils.getTime(order.timestamp)}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/timeTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/barrier5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{order.user.contact}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/contactTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@{String.valueOf(order.productsCount)}"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/itemsCountTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier5" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="8dp" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="itemsCountTitle,contactTitle,timeTitle,dateTitle,orderIdTitle,nameTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderRequestOrdersRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>